--- a/server/.env.example
+++ b/server/.env.example
@@ -1,11 +1,9 @@
-# ATLAS_URI=mongodb+srv://admin:wNVYI4sbtEGHap9G@tipen-mern.den2anh.mongodb.net/?retryWrites=true&w=majority
-# PORT=5000
-
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=tipen-demo-pern-db
 DB_HOST=localhost
 DB_PORT=5434
+DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
 
 JWT_SIGNATURE_KEY=inirahasialohuwawawawawaw
 # 1zeNW6WOx4Ej5DvA
