--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "ts-node app.ts"
+    "start": "npx ts-node -r tsconfig-paths/register app.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -22,9 +23,11 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.11.13",
+    "@types/node": "^20.11.14",
     "express": "^4.18.2",
+    "prisma": "^5.9.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
