--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - .env
     volumes:
       - db:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      # - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: always
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d postgres" ]
