--- a/server/package.json
+++ b/server/package.json
@@ -6,18 +6,20 @@
     "start": "npx ts-node -r tsconfig-paths/register app.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.4",
     "dotenv": "^16.4.1",
     "express-validator": "^7.0.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "~2.0.0",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "~1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -25,9 +27,9 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.11.14",
+    "@types/node": "^20.11.16",
     "express": "^4.18.2",
-    "prisma": "^5.9.0",
+    "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
